# rust-platformer

./: Cargo.toml  README.md
assets/data/: map.tmx
src/: actions.rs  audio.rs  camera.rs  inventory.rs  lib.rs  loading.rs  main.rs  player.rs  resources.rs  splash.rs  tiled.rs  util.rs  world.rs
