[package]
name = "base-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version="0.6.1", features=["dynamic"] }
bevy_kira_audio = { version = "0.8" }
bevy_asset_loader = { version = "0.9", features=["render"]}
bevy_ecs_tilemap = "0.5.0"
tiled = { version = "0.9", default-features = false }
anyhow = "1.0.56"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
